--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "canvas-confetti": "^1.9.3",
     "dom-to-image": "^2.6.0",
+    "dom-to-image-more": "^3.5.0",
     "fabric": "^6.6.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
